turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:8: error: Unmatched closing brace '}' ignored here
    }
    ^DiskFourth:10: error: eof expected but '}' found.
}
^